--- a/webapp/index.html
+++ b/webapp/index.html
@@ -17,7 +17,7 @@
         Telegram.WebApp.MainButton.show();
 
         Telegram.WebApp.MainButton.onClick(() => {
-            fetch("https://b656c54c64db.ngrok-free.app/api/pay", {
+            fetch("https://tgstarapi.milliytech.uz/api/pay", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json"
