--- a/webapp/index.html
+++ b/webapp/index.html
@@ -22,18 +22,18 @@
             color: var(--text-color);
             display: flex;
             justify-content: center;
+            flex-direction: column;
             align-items: center;
             min-height: 100vh;
         }
 
         .container {
-            background-color: #f4f4f4;
-            width: 90%;
+            width: 100%;
+            padding: 24px;
             max-width: 400px;
-            padding: 32px 24px;
-            border-radius: 16px;
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
             text-align: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+            border-radius: 12px;
         }
 
         .icon {
