--- a/webapp/index.html
+++ b/webapp/index.html
@@ -82,7 +82,9 @@
 </head>
 <body>
 <div class="container">
-    <div class="icon">💎</div>
+    <div class="icon">
+        <img src="https://i.postimg.cc/28Wc42fv/utya-utya-duck.gif" alt="diamond gif" style="width:100px; height:100px;">
+    </div>
     <h1>Buy 1 Diamond in OneGame</h1>
     <p>Use Telegram Stars to purchase in-game currency</p>
     <div class="price">
