--- a/webapp/index.html
+++ b/webapp/index.html
@@ -84,12 +84,12 @@
 <body>
 <div class="container">
     <div class="icon">
-        <img src="utya-utya-duck.gif" alt="diamond gif" style="width:64px; height:64px;">
+        <img src="https://i.postimg.cc/28Wc42fv/utya-utya-duck.gif" alt="diamond gif" style="width:64px; height:64px;">
     </div>
     <h1>Buy 1 Diamond in OneGame</h1>
     <p>Use Telegram Stars to purchase in-game currency</p>
     <div class="price">
-        <img src="star.png" alt="star icon">
+        <img src="https://i.postimg.cc/Hx4m5Dbj/star.png" alt="star icon">
         1 Stars
     </div>
     <div class="status" id="statusMsg"></div>
