--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Buy Diamonds with Stars</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Buy Diamonds with Stars</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://i.postimg.cc/28Wc42fv/utya-utya-duck.gif" type="image/gif">
     <style>
         :root {
             --bg-color: var(--tg-theme-bg-color, #f9f9f9);
@@ -14,6 +14,8 @@
             --accent-color: var(--tg-theme-button-color, #2ea6ff);
             --accent-text: var(--tg-theme-button-text-color, #fff);
             --border-color: #ddd;
+            --card-bg: var(--tg-theme-secondary-bg-color, #fff);
+            --shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         * {
@@ -22,8 +24,8 @@
 
         body {
             margin: 0;
-            padding: 24px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 20px;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             background-color: var(--bg-color);
             color: var(--text-color);
             display: flex;
@@ -33,45 +35,59 @@
             min-height: 100vh;
         }
 
+        .container {
+            background: var(--card-bg);
+            border-radius: 12px;
+            padding: 24px;
+            box-shadow: var(--shadow);
+            width: 100%;
+            max-width: 400px;
+            text-align: center;
+        }
+
         .icon img {
-            width: 64px;
-            height: 64px;
+            width: 80px;
+            height: 80px;
             margin-bottom: 16px;
         }
 
         h1 {
-            font-size: 20px;
+            font-size: 24px;
             margin-bottom: 8px;
-            text-align: center;
         }
 
         p {
-            font-size: 14px;
+            font-size: 16px;
             color: var(--hint-color);
             margin-bottom: 24px;
-            text-align: center;
         }
 
         .input-group {
             display: flex;
             align-items: center;
-            gap: 8px;
+            justify-content: center;
+            gap: 12px;
             margin-bottom: 24px;
         }
 
-        .input-group input {
-            width: 60px;
-            padding: 8px;
+        .star-icon {
+            width: 24px;
+            height: 24px;
+        }
+
+        .amount-input {
+            width: 100px;
+            padding: 10px;
             font-size: 16px;
             border: 1px solid var(--border-color);
             border-radius: 6px;
             text-align: center;
-            color: var(--text-color);
+            transition: border-color 0.3s;
         }
 
-        .input-group img {
-            width: 24px;
-            height: 24px;
+        .amount-input:focus {
+            outline: none;
+            border-color: var(--accent-color);
         }
 
         .status {
@@ -88,25 +104,39 @@
         .status.success {
             color: #27ae60;
         }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        .fade-in {
+            animation: fadeIn 0.5s ease-in;
+        }
     </style>
 </head>
 <body>
-<div class="icon">
-    <img src="https://i.postimg.cc/28Wc42fv/utya-utya-duck.gif" alt="diamond gif">
+<div class="container fade-in">
+    <div class="icon">
+        <img src="https://i.postimg.cc/28Wc42fv/utya-utya-duck.gif" alt="Diamond">
+    </div>
+    <h1>Buy Diamonds in OneGame</h1>
+    <p>Use Telegram Stars to purchase in-game currency</p>
+    <div class="input-group">
+        <img src="https://i.postimg.cc/Hx4m5Dbj/star.png" alt="Star" class="star-icon">
+        <input type="number" id="starAmount" min="1" value="1" class="amount-input" aria-label="Amount of Stars">
+    </div>
+    <div id="statusMsg" class="status"></div>
 </div>
-<h1>Buy Diamonds in OneGame</h1>
-<p>Use Telegram Stars to purchase in-game currency</p>
-<div class="input-group">
-    <img src="https://i.postimg.cc/Hx4m5Dbj/star.png" alt="star icon">
-    <input type="number" id="starAmount" min="1" value="1"/>
-</div>
-<div class="status" id="statusMsg"></div>
 
 <script>
     Telegram.WebApp.ready();
     const mainBtn = Telegram.WebApp.MainButton;
     const user = Telegram.WebApp.initDataUnsafe?.user;
-
 
     function updateButton(amount) {
         mainBtn.setText(`Pay ${amount} Star${amount > 1 ? 's' : ''}`);
@@ -143,7 +173,13 @@
                 });
                 const data = await res.json();
                 if (data.status === 'ok' && data.invoice_url) {
-                    Telegram.WebApp.openInvoice(data.invoice_url);
+                    Telegram.WebApp.openInvoice(data.invoice_url, (status) => {
+                        if (status === 'paid') {
+                            showMessage('✅ Payment successful!', false);
+                        } else {
+                            showMessage('❌ Payment failed or was cancelled.', true);
+                        }
+                    });
                 } else {
                     showMessage('❌ ' + (data.message || 'An error occurred'), true);
                 }
@@ -159,15 +195,21 @@
     }
 
     Telegram.WebApp.onEvent('invoiceClosed', function () {
-        showMessage('✅ Invoice closed', false);
         mainBtn.showProgress(false);
-        updateButton(parseInt(10));
+        updateButton(parseInt(amountInput.value, 10));
     });
 
     function showMessage(msg, isError = false) {
         const status = document.getElementById('statusMsg');
         status.textContent = msg;
         status.className = 'status ' + (isError ? 'error' : 'success');
+        if (msg) {
+            status.classList.add('fade-in');
+            setTimeout(() => {
+                status.classList.remove('fade-in');
+                status.textContent = '';
+            }, 3000);
+        }
     }
 </script>
 </body>
