--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,206 +7,183 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="icon" href="https://i.postimg.cc/28Wc42fv/utya-utya-duck.gif" type="image/gif">
     <style>
-        :root {
-            --bg-color: var(--tg-theme-bg-color, #f9f9f9);
-            --text-color: var(--tg-theme-text-color, #333);
-            --hint-color: var(--tg-theme-hint-color, #666);
-            --accent-color: var(--tg-theme-button-color, #2ea6ff);
-            --accent-text: var(--tg-theme-button-text-color, #fff);
-            --border-color: #ddd;
-            --card-bg: var(--tg-theme-secondary-bg-color, #fff);
-            --shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-
-        * {
-            box-sizing: border-box;
-        }
-
         body {
-            margin: 0;
-            padding: 20px;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            background-color: var(--bg-color);
-            color: var(--text-color);
+            font-family: Arial, sans-serif;
+            background: #f0f0f0;
             display: flex;
-            flex-direction: column;
-            align-items: center;
             justify-content: center;
-            min-height: 100vh;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
 
         .container {
-            background: var(--card-bg);
-            border-radius: 12px;
-            padding: 24px;
-            box-shadow: var(--shadow);
-            width: 100%;
-            max-width: 400px;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
+            max-width: 400px;
+            width: 100%;
         }
 
         .icon img {
-            width: 80px;
-            height: 80px;
-            margin-bottom: 16px;
+            width: 100px;
+            height: 100px;
         }
 
         h1 {
             font-size: 24px;
-            margin-bottom: 8px;
+            margin: 10px 0;
         }
 
         p {
             font-size: 16px;
-            color: var(--hint-color);
-            margin-bottom: 24px;
+            color: #666;
+            margin: 0 0 20px 0;
         }
 
         .input-group {
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 12px;
-            margin-bottom: 24px;
+            margin-bottom: 20px;
         }
 
         .star-icon {
             width: 24px;
             height: 24px;
+            margin-right: 10px;
         }
 
         .amount-input {
-            width: 100px;
             padding: 10px;
             font-size: 16px;
-            border: 1px solid var(--border-color);
-            border-radius: 6px;
-            text-align: center;
-            transition: border-color 0.3s;
-        }
-
-        .amount-input:focus {
-            outline: none;
-            border-color: var(--accent-color);
+            width: 100px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
         }
 
         .status {
+            margin-top: 10px;
             font-size: 14px;
-            margin-top: 16px;
-            min-height: 1.2em;
-            text-align: center;
         }
 
-        .status.error {
-            color: #e74c3c;
+        .error {
+            color: #d32f2f;
         }
 
-        .status.success {
-            color: #27ae60;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
+        .success {
+            color: #388e3c;
         }
 
         .fade-in {
-            animation: fadeIn 0.5s ease-in;
+            animation: fadeIn 0.5s;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="container fade-in">
-        <div class="icon">
-            <img src="https://i.postimg.cc/28Wc42fv/utya-utya-duck.gif" alt="Diamond">
-        </div>
-        <h1>Buy Diamonds in OneGame</h1>
-        <p>Use Telegram Stars to purchase in-game currency</p>
-        <div class="input-group">
-            <img src="https://i.postimg.cc/Hx4m5Dbj/star.png" alt="Star" class="star-icon">
-            <input type="number" id="starAmount" min="1" value="1" class="amount-input" aria-label="Amount of Stars">
-        </div>
-        <div id="statusMsg" class="status"></div>
+<div class="container fade-in">
+    <div class="icon">
+        <img src="https://i.postimg.cc/28Wc42fv/utya-utya-duck.gif" alt="Diamond">
     </div>
+    <h1>Buy Diamonds in OneGame</h1>
+    <p>Use Telegram Stars to purchase in-game currency</p>
+    <div class="input-group">
+        <img src="https://i.postimg.cc/Hx4m5Dbj/star.png" alt="Star" class="star-icon">
+        <input type="number" id="starAmount" min="1" value="1" class="amount-input" aria-label="Amount of Stars">
+    </div>
+    <div id="statusMsg" class="status"></div>
+</div>
 
-    <script>
-        Telegram.WebApp.ready();
-        const mainBtn = Telegram.WebApp.MainButton;
-        const user = Telegram.WebApp.initDataUnsafe?.user;
+<script>
+    Telegram.WebApp.ready();
+    const mainBtn = Telegram.WebApp.MainButton;
+    const user = Telegram.WebApp.initDataUnsafe?.user;
 
-        function updateButton(amount) {
-            mainBtn.setText(`Pay ${amount} Star${amount > 1 ? 's' : ''}`);
-        }
+    function updateButton(amount) {
+        mainBtn.setText(`Pay ${amount} Star${amount > 1 ? 's' : ''}`);
+    }
 
-        if (user) {
-            updateButton(1);
-            mainBtn.show();
+    if (user) {
+        updateButton(1);
+        mainBtn.show();
 
-            const amountInput = document.getElementById('starAmount');
-            amountInput.addEventListener('input', () => {
-                let val = parseInt(amountInput.value, 10);
-                if (isNaN(val) || val < 1) val = 1;
-                amountInput.value = val;
-                updateButton(val);
-                showMessage('');
-            });
+        const amountInput = document.getElementById('starAmount');
+        amountInput.addEventListener('input', () => {
+            let val = parseInt(amountInput.value, 10);
+            if (isNaN(val) || val < 1) val = 1;
+            amountInput.value = val;
+            updateButton(val);
+            showMessage('');
+        });
 
-            mainBtn.onClick(async () => {
-                const amount = parseInt(amountInput.value, 10);
-                showMessage('');
-                mainBtn.showProgress(true);
+        mainBtn.onClick(async () => {
+            const amount = parseInt(amountInput.value, 10);
+            showMessage('');
+            mainBtn.showProgress(true); // Progressni ko'rsatish
 
-                try {
-                    const res = await fetch('https://tgstar.milliytech.uz/api/pay', {
-                        method: 'POST',
-                        headers: {'Content-Type': 'application/json'},
-                        body: JSON.stringify({
-                            user_id: user.id,
-                            username: user.username || '',
-                            full_name: `${user.first_name || ''} ${user.last_name || ''}`.trim(),
-                            amount: amount
-                        })
-                    });
-                    const data = await res.json();
-                    if (data.status === 'ok' && data.invoice_url) {
-                        Telegram.WebApp.openInvoice(data.invoice_url);
-                    } else {
-                        showMessage('❌ ' + (data.message || 'An error occurred'), true);
-                        mainBtn.showProgress(false);
-                        updateButton(amount);
-                    }
-                } catch (err) {
-                    showMessage('❌ Network error: ' + err.message, true);
-                    mainBtn.showProgress(false);
+            try {
+                const res = await fetch('https://tgstar.milliytech.uz/api/pay', {
+                    method: 'POST',
+                    headers: {'Content-Type': 'application/json'},
+                    body: JSON.stringify({
+                        user_id: user.id,
+                        username: user.username || '',
+                        full_name: `${user.first_name || ''} ${user.last_name || ''}`.trim(),
+                        amount: amount
+                    })
+                });
+                const data = await res.json();
+                if (data.status === 'ok' && data.invoice_url) {
+                    Telegram.WebApp.openInvoice(data.invoice_url);
+                    // Progressni bu yerda yashirmaymiz, invoiceClosed ni kutamiz
+                } else {
+                    showMessage('❌ ' + (data.message || 'Xatolik yuz berdi'), true);
+                    mainBtn.hideProgress(); // Xatolik bo'lsa progressni yashirish
                     updateButton(amount);
                 }
-            });
-
-            Telegram.WebApp.onEvent('invoiceClosed', function(object) {
-                mainBtn.showProgress(false);
-                if (object.status === 'paid') {
-                    showMessage('✅ Payment successful!', false);
-                } else {
-                    showMessage('❌ Payment failed or was cancelled.', true);
-                }
-                updateButton(parseInt(amountInput.value, 10));
-            });
-        } else {
-            showMessage('❌ Could not load user data. Please reload.', true);
-        }
-
-        function showMessage(msg, isError = false) {
-            const status = document.getElementById('statusMsg');
-            status.textContent = msg;
-            status.className = 'status ' + (isError ? 'error' : 'success');
-            if (msg) {
-                status.classList.add('fade-in');
-                setTimeout(() => {
-                    status.classList.remove('fade-in');
-                    status.textContent = '';
-                }, 3000);
+            } catch (err) {
+                showMessage('❌ Tarmoq xatosi: ' + err.message, true);
+                mainBtn.hideProgress(); // Tarmoq xatosi bo'lsa progressni yashirish
+                updateButton(amount);
             }
+        });
+
+        Telegram.WebApp.onEvent('invoiceClosed', function (object) {
+            mainBtn.hideProgress(); // Invoys yopilganda progressni yashirish
+            if (object.status === 'paid') {
+                showMessage('✅ To\'lov muvaffaqiyatli amalga oshirildi!', false);
+            } else {
+                showMessage('❌ To\'lov amalga oshmadi yoki bekor qilindi.', true);
+            }
+            updateButton(parseInt(amountInput.value, 10));
+        });
+    } else {
+        showMessage('❌ Foydalanuvchi ma\'lumotlari yuklanmadi. Iltimos, qayta yuklang.', true);
+    }
+
+    function showMessage(msg, isError = false) {
+        const status = document.getElementById('statusMsg');
+        status.textContent = msg;
+        status.className = 'status ' + (isError ? 'error' : 'success');
+        if (msg) {
+            status.classList.add('fade-in');
+            setTimeout(() => {
+                status.classList.remove('fade-in');
+                status.textContent = '';
+            }, 3000);
         }
-    </script>
+    }
+</script>
 </body>
 </html>
